--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SUMBER FAKTA</title>
+
+  <!-- SEO -->
   <meta name="description" content="SUMBER FAKTA — portal agregator berita Indonesia & dunia. Ringan, elegan, dan selalu terkurasi." />
-  <link rel="icon" href="logo.svg" />
   <meta property="og:title" content="SUMBER FAKTA" />
   <meta property="og:description" content="Portal agregator berita Indonesia & dunia. Ringan & elegan." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mukemen.github.io/sumberfakta/" />
+
+  <!-- Favicon/Brand -->
+  <link rel="icon" href="logo.svg" />
+
+  <!-- No cache agar Pages tidak menahan versi lama -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     :root{
       --brand-navy:#10203B;
@@ -18,15 +30,13 @@
       --brand-cyan:#2EC5F4;
       --brand-green:#22C55E;
     }
-    .brand-gradient{ background:linear-gradient(135deg,var(--brand-blue),var(--brand-cyan)); }
-    .line-clamp-2{ display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden }
-    .line-clamp-3{ display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden }
+    .line-clamp-2{ display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden }
+    .line-clamp-3{ display:-webkit-box; -webkit-line-clamp:3; -webkit-box-orient:vertical; overflow:hidden }
     .glass{ backdrop-filter:saturate(140%) blur(8px); background-color:rgba(255,255,255,.75) }
     .shadow-soft{ box-shadow:0 8px 24px rgba(16,32,59,.08) }
     .card{ transition:transform .2s ease, box-shadow .2s ease }
     .card:hover{ transform:translateY(-2px); box-shadow:0 12px 28px rgba(16,32,59,.12) }
     .hero-img{ background-size:cover;background-position:center }
-    .badge{ @apply px-2 py-0.5 rounded-full text-xs border; }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
@@ -39,25 +49,24 @@
           <span class="text-slate-900">SUMBER</span> <span class="text-[var(--brand-blue)]">FAKTA</span>
         </h1>
       </a>
-      <div class="flex-1"></div>
+      <div class="hidden md:block flex-1"></div>
       <div class="hidden md:block w-[380px]">
         <label class="relative block">
           <input id="search" placeholder="Cari berita, sumber, kategori…" class="w-full rounded-full border-slate-200 bg-slate-100 focus:bg-white focus:outline-none focus:ring-2 focus:ring-[var(--brand-blue)] px-4 py-2 text-sm" />
           <span class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-400 text-xs">/</span>
         </label>
       </div>
+      <button id="searchBtn" class="md:hidden px-3 py-1.5 rounded-full border bg-white text-sm">Cari</button>
     </div>
     <nav id="cats" class="max-w-7xl mx-auto px-4 pb-3 flex flex-wrap gap-2"></nav>
   </header>
 
-  <!-- MAIN LIST -->
+  <!-- HOME -->
   <main id="page-home" class="max-w-7xl mx-auto px-4 py-6 space-y-6">
     <p id="meta" class="text-xs text-slate-500">Memuat…</p>
 
     <!-- HERO -->
-    <section id="hero" class="grid lg:grid-cols-3 gap-4">
-      <!-- diisi via JS -->
-    </section>
+    <section id="hero" class="grid lg:grid-cols-3 gap-4"></section>
 
     <!-- GRID -->
     <section>
@@ -68,7 +77,7 @@
     </section>
   </main>
 
-  <!-- ARTICLE DETAIL -->
+  <!-- DETAIL -->
   <main id="page-article" class="max-w-3xl mx-auto px-4 py-8 hidden">
     <a href="./" class="text-sm text-[var(--brand-blue)] hover:underline">← Kembali</a>
     <article class="mt-3 bg-white rounded-2xl border shadow-soft overflow-hidden">
@@ -88,13 +97,12 @@
             Baca sumber
             <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M7 17L17 7M7 7h10v10"/></svg>
           </a>
-          <!-- Share -->
           <div class="ml-auto flex items-center gap-2 text-slate-500">
             <span class="text-xs">Bagikan:</span>
-            <a id="shareWa"   target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="WhatsApp">🟢</a>
-            <a id="shareX"    target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Twitter/X">✖️</a>
-            <a id="shareFb"   target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Facebook">📘</a>
-            <a id="shareTg"   target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Telegram">💬</a>
+            <a id="shareWa" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="WhatsApp">🟢</a>
+            <a id="shareX"  target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="X/Twitter">✖️</a>
+            <a id="shareFb" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Facebook">📘</a>
+            <a id="shareTg" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Telegram">💬</a>
           </div>
         </div>
       </div>
@@ -102,48 +110,83 @@
   </main>
 
   <footer class="max-w-7xl mx-auto px-4 py-10 text-xs text-slate-500">
-    © <span id="year"></span> SUMBER FAKTA • Agregator berita. Desain oleh Mukemen.
+    © <span id="year"></span> SUMBER FAKTA • Agregator berita.
   </footer>
 
 <script>
-/* ========= DATA & UTIL ========= */
+/* ========= KONFIGURASI ========= */
 const RAW_URL = "https://raw.githubusercontent.com/mukemen/sumberfakta/main/news.json";
+const IS_VERCEL = location.hostname.endsWith(".vercel.app"); // di Vercel prefer RAW
 const CATS = ["semua","politik","sport","entertainment","hobi","movie","music","bisnis","tekno","dunia"];
 const state = { cat:"semua", items:[], generatedAt:null, page:1, pageSize:12, keyword:"" };
 
-const fmtTime = iso => {
-  try{ return new Intl.DateTimeFormat("id-ID",{dateStyle:"medium",timeStyle:"short"}).format(new Date(iso)); }
-  catch{ return iso; }
-};
+/* ========= UTIL ========= */
+const fmtTime = iso => { try { return new Intl.DateTimeFormat("id-ID",{dateStyle:"medium",timeStyle:"short"}).format(new Date(iso)); } catch { return iso; } };
 const idOf = it => encodeURIComponent((it.link||it.title||"").toLowerCase());
 
-/* ========= HEADER NAV ========= */
+async function fetchWithTimeout(url, ms=5000){
+  return await Promise.race([
+    fetch(url, { cache:"no-store" }),
+    new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))
+  ]);
+}
+
+/* ========= LOADER ANTI-STUCK (local ↔ raw) ========= */
+async function loadNews(){
+  const localURL = "./news.json?nocache="+Date.now();
+  const rawURL   = RAW_URL+"?nocache="+Date.now();
+
+  const first  = IS_VERCEL ? rawURL : localURL;
+  const second = IS_VERCEL ? localURL : rawURL;
+
+  try {
+    const a = await fetchWithTimeout(first, 3500);
+    if (a.ok) return await a.json();
+    throw new Error("first not ok");
+  } catch {
+    const b = await fetchWithTimeout(second, 7000);
+    if (!b.ok) throw new Error("fallback not ok");
+    return await b.json();
+  }
+}
+
+/* ========= NAV KATEGORI ========= */
 function renderCats(){
   const nav = document.getElementById("cats");
-  nav.innerHTML = `
-    <button id="searchBtn" class="md:hidden px-3 py-1.5 rounded-full border bg-white text-sm">Cari</button>
-  `;
+  nav.innerHTML = "";
   CATS.forEach(c=>{
-    const a = document.createElement("button");
-    a.type="button"; a.textContent=c;
-    a.className="px-3 py-1.5 rounded-full border text-sm "+(state.cat===c?"bg-slate-900 text-white border-slate-900":"bg-white hover:bg-slate-50");
-    a.onclick=()=>{ state.cat=c; state.page=1; renderAll(); };
-    nav.appendChild(a);
+    const btn = document.createElement("button");
+    btn.type="button"; btn.textContent=c;
+    btn.className="px-3 py-1.5 rounded-full border text-sm "+(state.cat===c?"bg-slate-900 text-white border-slate-900":"bg-white hover:bg-slate-50");
+    btn.onclick=()=>{ state.cat=c; state.page=1; renderAll(); };
+    nav.appendChild(btn);
   });
 }
 
+/* ========= FILTER ========= */
+function filtered(){
+  let list = [...state.items];
+  if (state.cat!=="semua") list = list.filter(i=>i.category===state.cat);
+  if (state.keyword) {
+    const k = state.keyword.toLowerCase();
+    list = list.filter(i=>(i.title||"").toLowerCase().includes(k) || (i.summary||"").toLowerCase().includes(k) || (i.source||"").toLowerCase().includes(k));
+  }
+  return list;
+}
+
 /* ========= HERO ========= */
-function renderHero(items){
+function renderHero(list){
   const el = document.getElementById("hero");
   el.innerHTML="";
-  const top = items.slice(0,3);
+  const top = list.slice(0,3);
+  if(!top.length){ el.innerHTML = `<div class="col-span-3 text-sm text-slate-500">Belum ada berita.</div>`; return; }
   top.forEach((it,idx)=>{
-    const wrap = document.createElement("a");
-    wrap.href = "#/article/"+idOf(it);
-    wrap.className = "block rounded-2xl overflow-hidden border bg-white shadow-soft card";
+    const a = document.createElement("a");
+    a.href = "#/article/"+idOf(it);
+    a.className = "block rounded-2xl overflow-hidden border bg-white shadow-soft card";
     const img = it.image ? `style="background-image:url('${it.image}');"` : "";
-    wrap.innerHTML = `
-      <div class="h-40 sm:h-56 lg:h-56 hero-img ${idx===0?'lg:col-span-2':''}" ${img}></div>
+    a.innerHTML = `
+      <div class="h-40 sm:h-56 hero-img ${idx===0?'lg:col-span-2':''}" ${img}></div>
       <div class="p-4 sm:p-5 space-y-2">
         <div class="text-xs text-slate-500 flex items-center gap-2">
           <span class="px-2 py-0.5 rounded-full bg-slate-100 border">${it.category || "umum"}</span>
@@ -154,22 +197,13 @@ function renderHero(items){
         <h3 class="text-lg sm:text-xl font-semibold leading-snug">${it.title}</h3>
         ${it.summary?`<p class="text-slate-600 text-sm line-clamp-2">${it.summary}</p>`:""}
       </div>`;
-    el.appendChild(wrap);
+    el.appendChild(a);
   });
 }
 
 /* ========= GRID ========= */
-function filtered(){
-  let list = [...state.items];
-  if (state.cat!=="semua") list = list.filter(i=>i.category===state.cat);
-  if (state.keyword) {
-    const k = state.keyword.toLowerCase();
-    list = list.filter(i=>(i.title||"").toLowerCase().includes(k) || (i.summary||"").toLowerCase().includes(k) || (i.source||"").toLowerCase().includes(k));
-  }
-  return list;
-}
 function renderGrid(){
-  const list = filtered().slice(3, 3 + state.page*state.pageSize); // lewati 3 hero pertama
+  const list = filtered().slice(3, 3 + state.page*state.pageSize); // lewati 3 hero
   const grid = document.getElementById("grid");
   grid.innerHTML = "";
   list.forEach(it=>{
@@ -210,22 +244,18 @@ function renderAll(){
 
 /* ========= DETAIL ========= */
 function openArticleById(id){
-  const all = state.items;
-  const item = all.find(it => idOf(it) === id);
+  const item = state.items.find(it => idOf(it) === id);
   if (!item) { location.hash=""; return; }
 
-  // isi elemen
   document.getElementById("artTitle").textContent = item.title || "";
   document.getElementById("artCat").textContent = item.category || "umum";
   document.getElementById("artSource").textContent = item.source || "";
   document.getElementById("artTime").textContent = fmtTime(item.publishedAt);
   document.getElementById("artSummary").textContent = item.summary || "Ringkasan tidak tersedia.";
   document.getElementById("artLink").href = item.link || "#";
-
   const cover = document.getElementById("artCover");
   cover.style.backgroundImage = item.image ? `url('${item.image}')` : "linear-gradient(135deg,#eef2ff,#f8fafc)";
 
-  // share
   const u = encodeURIComponent(item.link || location.href);
   const t = encodeURIComponent(item.title || "SUMBER FAKTA");
   document.getElementById("shareWa").href = `https://wa.me/?text=${t}%20${u}`;
@@ -233,7 +263,6 @@ function openArticleById(id){
   document.getElementById("shareFb").href = `https://www.facebook.com/sharer/sharer.php?u=${u}`;
   document.getElementById("shareTg").href = `https://t.me/share/url?url=${u}&text=${t}`;
 
-  // tampilkan halaman detail
   document.getElementById("page-home").classList.add("hidden");
   document.getElementById("page-article").classList.remove("hidden");
   window.scrollTo({top:0,behavior:"smooth"});
@@ -246,52 +275,32 @@ function backHome(){
 /* ========= ROUTER ========= */
 function router(){
   const h = location.hash;
-  if (h.startsWith("#/article/")) {
-    const id = h.split("/").pop();
-    openArticleById(id);
-  } else {
-    backHome();
-  }
+  if (h.startsWith("#/article/")) openArticleById(h.split("/").pop());
+  else backHome();
 }
 window.addEventListener("hashchange", router);
 
-/* ========= FETCH DATA ========= */
-async function loadNews(){
-  // coba local news.json dulu
-  try {
-    const r = await fetch("./news.json?nocache="+Date.now(), {cache:"no-store"});
-    if (r.ok) return await r.json();
-  } catch {}
-  // fallback ke raw github
-  const r2 = await fetch(RAW_URL+"?nocache="+Date.now(), {cache:"no-store"});
-  if (!r2.ok) throw new Error("Gagal fetch raw JSON");
-  return await r2.json();
-}
-
 /* ========= INIT ========= */
 (async ()=>{
-  // keyboard focus cepat ke search
-  window.addEventListener("keydown",e=>{ if(e.key==="/"){ e.preventDefault(); const s=document.getElementById("search"); s?.focus(); }});
+  // shortcut search
+  window.addEventListener("keydown",e=>{ if(e.key==="/"){ e.preventDefault(); document.getElementById("search")?.focus(); }});
   document.getElementById("searchBtn").onclick=()=>document.getElementById("search").focus();
   document.getElementById("moreBtn").onclick=()=>{ state.page++; renderGrid(); };
 
   const data = await loadNews().catch(()=>({items:[],generatedAt:null}));
   state.items = Array.isArray(data.items) ? data.items : [];
   state.generatedAt = data.generatedAt || new Date().toISOString();
-
-  // sort terbaru dulu
   state.items.sort((a,b)=>+new Date(b.publishedAt||0)-+new Date(a.publishedAt||0));
 
-  // search
   const input = document.getElementById("search");
-  input.addEventListener("input", ()=>{
+  input?.addEventListener("input", ()=>{
     state.keyword = input.value.trim();
     state.page = 1;
     renderAll();
   });
 
   renderAll();
-  router(); // jika langsung membuka #/article/...
+  router();
 })();
 
 document.getElementById("year").textContent = new Date().getFullYear();
