--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mukemen.github.io/sumberfakta/" />
 
-  <!-- Favicon/Brand -->
+  <!-- Favicon/Brand (opsional) -->
   <link rel="icon" href="logo.svg" />
 
   <!-- No cache agar Pages tidak menahan versi lama -->
@@ -25,18 +25,20 @@
 
   <style>
     :root{
-      --brand-navy:#10203B;
-      --brand-blue:#1E88E5;
-      --brand-cyan:#2EC5F4;
-      --brand-green:#22C55E;
+      --brand-dark:#0f172a;
+      --brand-accent:#ff6b00; /* aksen oranye ala portal lokal */
     }
     .line-clamp-2{ display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden }
     .line-clamp-3{ display:-webkit-box; -webkit-line-clamp:3; -webkit-box-orient:vertical; overflow:hidden }
-    .glass{ backdrop-filter:saturate(140%) blur(8px); background-color:rgba(255,255,255,.75) }
-    .shadow-soft{ box-shadow:0 8px 24px rgba(16,32,59,.08) }
-    .card{ transition:transform .2s ease, box-shadow .2s ease }
-    .card:hover{ transform:translateY(-2px); box-shadow:0 12px 28px rgba(16,32,59,.12) }
+    .glass{ backdrop-filter:saturate(140%) blur(8px); background-color:rgba(255,255,255,.8) }
+    .shadow-soft{ box-shadow:0 10px 28px rgba(15,23,42,.10) }
+    .card{ transition:transform .18s ease, box-shadow .18s ease }
+    .card:hover{ transform:translateY(-2px); box-shadow:0 12px 32px rgba(15,23,42,.14) }
     .hero-img{ background-size:cover;background-position:center }
+    .badge{ border:1px solid rgba(15,23,42,.1); background:#fff }
+    .accent{ color:var(--brand-accent) }
+    .btn{ transition:filter .18s ease, transform .02s }
+    .btn:active{ transform:translateY(1px) }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
@@ -44,21 +46,26 @@
   <header class="sticky top-0 z-40 bg-white/90 border-b border-slate-200 glass">
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center gap-4">
       <a href="./" class="flex items-center gap-3 shrink-0">
-        <img src="logo.svg" alt="Logo SUMBER FAKTA" class="w-9 h-9">
-        <h1 class="text-xl sm:text-2xl font-extrabold tracking-tight">
-          <span class="text-slate-900">SUMBER</span> <span class="text-[var(--brand-blue)]">FAKTA</span>
-        </h1>
+        <div class="w-9 h-9 rounded-md bg-[var(--brand-accent)] text-white grid place-content-center font-black">SF</div>
+        <div>
+          <h1 class="text-xl sm:text-2xl font-extrabold tracking-tight">
+            <span>SUMBER</span> <span class="accent">FAKTA</span>
+          </h1>
+          <p class="text-[10px] -mt-1 text-slate-500">by FABARO GROUP</p>
+        </div>
       </a>
+
       <div class="hidden md:block flex-1"></div>
-      <div class="hidden md:block w-[380px]">
+      <div class="hidden md:block w-[420px]">
         <label class="relative block">
-          <input id="search" placeholder="Cari berita, sumber, kategori…" class="w-full rounded-full border-slate-200 bg-slate-100 focus:bg-white focus:outline-none focus:ring-2 focus:ring-[var(--brand-blue)] px-4 py-2 text-sm" />
+          <input id="search" placeholder="Cari berita, sumber, kategori…" class="w-full rounded-full border-slate-200 bg-slate-100 focus:bg-white focus:outline-none focus:ring-2 focus:ring-[var(--brand-accent)] px-4 py-2 text-sm" />
           <span class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-400 text-xs">/</span>
         </label>
       </div>
       <button id="searchBtn" class="md:hidden px-3 py-1.5 rounded-full border bg-white text-sm">Cari</button>
     </div>
-    <nav id="cats" class="max-w-7xl mx-auto px-4 pb-3 flex flex-wrap gap-2"></nav>
+
+    <nav id="cats" class="max-w-7xl mx-auto px-4 pb-3 flex gap-2 overflow-x-auto"></nav>
   </header>
 
   <!-- HOME -->
@@ -72,19 +79,19 @@
     <section>
       <div id="grid" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
       <div class="mt-6 text-center">
-        <button id="moreBtn" class="px-5 py-2 rounded-full bg-slate-900 text-white hover:bg-slate-800 disabled:opacity-40">Muat lebih</button>
+        <button id="moreBtn" class="btn px-5 py-2 rounded-full bg-[var(--brand-accent)] text-white hover:brightness-95 disabled:opacity-40">Muat lebih</button>
       </div>
     </section>
   </main>
 
   <!-- DETAIL -->
   <main id="page-article" class="max-w-3xl mx-auto px-4 py-8 hidden">
-    <a href="./" class="text-sm text-[var(--brand-blue)] hover:underline">← Kembali</a>
+    <a href="./" class="text-sm accent hover:underline">← Kembali</a>
     <article class="mt-3 bg-white rounded-2xl border shadow-soft overflow-hidden">
       <div id="artCover" class="h-56 sm:h-80 hero-img bg-slate-200"></div>
       <div class="p-6 sm:p-8 space-y-4">
-        <div class="flex items-center gap-3 text-xs text-slate-500">
-          <span id="artCat" class="px-2 py-0.5 rounded-full bg-slate-100 border"></span>
+        <div class="flex flex-wrap items-center gap-3 text-xs text-slate-500">
+          <span id="artCat" class="badge px-2 py-0.5 rounded-full"></span>
           <span id="artSource"></span>
           <span>•</span>
           <time id="artTime"></time>
@@ -93,16 +100,16 @@
         <p id="artSummary" class="text-slate-700 text-[15px] leading-relaxed"></p>
 
         <div class="flex flex-wrap items-center gap-3 pt-2">
-          <a id="artLink" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-[var(--brand-blue)] text-white hover:brightness-95">
+          <a id="artLink" target="_blank" rel="noopener" class="btn inline-flex items-center gap-2 px-4 py-2 rounded-full bg-slate-900 text-white hover:brightness-95">
             Baca sumber
             <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M7 17L17 7M7 7h10v10"/></svg>
           </a>
           <div class="ml-auto flex items-center gap-2 text-slate-500">
             <span class="text-xs">Bagikan:</span>
-            <a id="shareWa" target="_blank" rel="noopener noreferrer" class="p-2 rounded-full hover:bg-slate-100" aria-label="WhatsApp">🟢</a>
-            <a id="shareX"  target="_blank" rel="noopener noreferrer" class="p-2 rounded-full hover:bg-slate-100" aria-label="X/Twitter">✖️</a>
-            <a id="shareFb" target="_blank" rel="noopener noreferrer" class="p-2 rounded-full hover:bg-slate-100" aria-label="Facebook">📘</a>
-            <a id="shareTg" target="_blank" rel="noopener noreferrer" class="p-2 rounded-full hover:bg-slate-100" aria-label="Telegram">💬</a>
+            <a id="shareWa" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="WhatsApp">🟢</a>
+            <a id="shareX"  target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="X/Twitter">✖️</a>
+            <a id="shareFb" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Facebook">📘</a>
+            <a id="shareTg" target="_blank" class="p-2 rounded-full hover:bg-slate-100" aria-label="Telegram">💬</a>
           </div>
         </div>
       </div>
@@ -110,48 +117,40 @@
   </main>
 
   <footer class="max-w-7xl mx-auto px-4 py-10 text-xs text-slate-500">
-    © <span id="year"></span> SUMBER FAKTA — by <strong>FABARO GROUP</strong>. Semua tautan menuju sumber resmi.
+    © <span id="year"></span> SUMBER FAKTA • Agregator berita • by FABARO GROUP.
   </footer>
 
 <script>
-/* ========= KONFIGURASI ========= */
+/* ========= KONFIG ========= */
 const RAW_URL = "https://raw.githubusercontent.com/mukemen/sumberfakta/main/news.json";
-const IS_VERCEL = location.hostname.endsWith(".vercel.app"); // di Vercel prefer RAW
-// Kategori konsisten dengan builder (normCat)
-const CATS = ["semua","nasional","politik","sport","bisnis","tekno","dunia","hiburan","musik","film","hobi"];
+const IS_VERCEL = location.hostname.endsWith(".vercel.app");
+const CATS = ["semua","nasional","politik","bisnis","sport","tekno","hiburan","music","movie","hobi"];
 
 const state = { cat:"semua", items:[], generatedAt:null, page:1, pageSize:12, keyword:"" };
-
-/* ========= FALLBACK IMAGE ========= */
-const FALLBACK_IMG = "data:image/svg+xml;utf8," + encodeURIComponent(
-  "<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 18'><defs><linearGradient id='g' x1='0' x2='1'><stop stop-color='#2dd4bf'/><stop offset='1' stop-color='#38bdf8'/></linearGradient></defs><rect width='32' height='18' fill='#eef2ff'/><circle cx='8' cy='9' r='3' fill='url(#g)'/><rect x='13' y='6' width='12' height='6' rx='1' fill='#cbd5e1'/></svg>"
-);
 
 /* ========= UTIL ========= */
 const fmtTime = iso => { try { return new Intl.DateTimeFormat("id-ID",{dateStyle:"medium",timeStyle:"short"}).format(new Date(iso)); } catch { return iso; } };
 const idOf = it => encodeURIComponent((it.link||it.title||"").toLowerCase());
 
-async function fetchWithTimeout(url, ms=5000){
+async function fetchWithTimeout(url, ms=6000){
   return await Promise.race([
     fetch(url, { cache:"no-store" }),
     new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))
   ]);
 }
 
-/* ========= LOADER ANTI-STUCK (local ↔ raw) ========= */
+/* ========= ANTI-STUCK LOADER (local ↔ raw) ========= */
 async function loadNews(){
   const localURL = "./news.json?nocache="+Date.now();
   const rawURL   = RAW_URL+"?nocache="+Date.now();
-
   const first  = IS_VERCEL ? rawURL : localURL;
   const second = IS_VERCEL ? localURL : rawURL;
-
   try {
-    const a = await fetchWithTimeout(first, 3500);
+    const a = await fetchWithTimeout(first, 4000);
     if (a.ok) return await a.json();
     throw new Error("first not ok");
   } catch {
-    const b = await fetchWithTimeout(second, 7000);
+    const b = await fetchWithTimeout(second, 8000);
     if (!b.ok) throw new Error("fallback not ok");
     return await b.json();
   }
@@ -164,7 +163,7 @@ function renderCats(){
   CATS.forEach(c=>{
     const btn = document.createElement("button");
     btn.type="button"; btn.textContent=c;
-    btn.className="px-3 py-1.5 rounded-full border text-sm "+(state.cat===c?"bg-slate-900 text-white border-slate-900":"bg-white hover:bg-slate-50");
+    btn.className="px-3 py-1.5 rounded-full border text-sm whitespace-nowrap "+(state.cat===c?"bg-[var(--brand-accent)] text-white border-[var(--brand-accent)]":"bg-white hover:bg-slate-50");
     btn.onclick=()=>{ state.cat=c; state.page=1; renderAll(); };
     nav.appendChild(btn);
   });
@@ -186,21 +185,17 @@ function renderHero(list){
   const el = document.getElementById("hero");
   el.innerHTML="";
   const top = list.slice(0,3);
-  if(!top.length){
-    el.innerHTML = `<div class="col-span-3 text-sm text-slate-500">Belum ada berita.</div>`;
-    return;
-  }
-  top.forEach((it,idx)=>{
+  if(!top.length){ el.innerHTML = `<div class="col-span-3 text-sm text-slate-500">Belum ada berita.</div>`; return; }
+  top.forEach((it)=>{
     const a = document.createElement("a");
     a.href = "#/article/"+idOf(it);
-    // span 2 kolom untuk item pertama
-    a.className = "block rounded-2xl overflow-hidden border bg-white shadow-soft card " + (idx===0 ? "lg:col-span-2" : "");
-    const bg = (it.image || FALLBACK_IMG);
+    a.className = "block rounded-2xl overflow-hidden border bg-white shadow-soft card";
+    const img = it.image ? `style="background-image:url('${it.image}');"` : "";
     a.innerHTML = `
-      <div class="h-40 sm:h-56 hero-img" style="background-image:url('${bg}')"></div>
+      <div class="h-40 sm:h-56 hero-img" ${img}></div>
       <div class="p-4 sm:p-5 space-y-2">
-        <div class="text-xs text-slate-500 flex items-center gap-2">
-          <span class="px-2 py-0.5 rounded-full bg-slate-100 border">${(it.category||"umum")}</span>
+        <div class="text-[11px] text-slate-500 flex items-center gap-2">
+          <span class="badge px-2 py-0.5 rounded-full">${(it.category||"umum")}</span>
           <span>${it.source||""}</span>
           <span>•</span>
           <time>${fmtTime(it.publishedAt)}</time>
@@ -214,7 +209,7 @@ function renderHero(list){
 
 /* ========= GRID ========= */
 function renderGrid(){
-  const list = filtered().slice(3, 3 + state.page*state.pageSize); // lewati 3 hero
+  const list = filtered().slice(3, 3 + state.page*state.pageSize); // skip 3 hero
   const grid = document.getElementById("grid");
   grid.innerHTML = "";
   list.forEach(it=>{
@@ -222,10 +217,10 @@ function renderGrid(){
     a.href = "#/article/"+idOf(it);
     a.className = "block bg-white rounded-2xl border overflow-hidden shadow-soft card";
     a.innerHTML = `
-      <img src="${it.image || FALLBACK_IMG}" alt="${it.title}" class="h-40 w-full object-cover" loading="lazy">
+      ${it.image?`<img src="${it.image}" alt="${it.title}" class="h-40 w-full object-cover" loading="lazy">`:`<div class="h-2 bg-gradient-to-r from-slate-100 to-slate-200"></div>`}
       <div class="p-4 space-y-2">
-        <div class="text-xs text-slate-500 flex items-center gap-2">
-          <span class="px-2 py-0.5 rounded-full bg-slate-100 border">${(it.category||"umum")}</span>
+        <div class="text-[11px] text-slate-500 flex items-center gap-2">
+          <span class="badge px-2 py-0.5 rounded-full">${(it.category||"umum")}</span>
           <span class="truncate">${it.source||""}</span>
         </div>
         <h3 class="font-semibold leading-snug">${it.title}</h3>
@@ -265,12 +260,12 @@ function openArticleById(id){
   document.getElementById("artSummary").textContent = item.summary || "Ringkasan tidak tersedia.";
   document.getElementById("artLink").href = item.link || "#";
   const cover = document.getElementById("artCover");
-  cover.style.backgroundImage = `url('${item.image || FALLBACK_IMG}')`;
+  cover.style.backgroundImage = item.image ? `url('${item.image}')` : "linear-gradient(135deg,#eef2ff,#f8fafc)";
 
   const u = encodeURIComponent(item.link || location.href);
   const t = encodeURIComponent(item.title || "SUMBER FAKTA");
   document.getElementById("shareWa").href = `https://wa.me/?text=${t}%20${u}`;
-  document.getElementById("shareX").href  = `https://x.com/intent/post?text=${t}&url=${u}`;
+  document.getElementById("shareX").href  = `https://twitter.com/intent/tweet?text=${t}&url=${u}`;
   document.getElementById("shareFb").href = `https://www.facebook.com/sharer/sharer.php?u=${u}`;
   document.getElementById("shareTg").href = `https://t.me/share/url?url=${u}&text=${t}`;
 
@@ -293,11 +288,8 @@ window.addEventListener("hashchange", router);
 
 /* ========= INIT ========= */
 (async ()=>{
-  // shortcut search
-  window.addEventListener("keydown",(e)=>{
-    if(e.key==="/"){ e.preventDefault(); document.getElementById("search")?.focus(); }
-    if((e.ctrlKey||e.metaKey) && e.key.toLowerCase()==="k"){ e.preventDefault(); document.getElementById("search")?.focus(); }
-  });
+  // search shortcut
+  window.addEventListener("keydown",e=>{ if(e.key==="/"){ e.preventDefault(); document.getElementById("search")?.focus(); }});
   document.getElementById("searchBtn").onclick=()=>document.getElementById("search").focus();
   document.getElementById("moreBtn").onclick=()=>{ state.page++; renderGrid(); };
 
@@ -316,7 +308,6 @@ window.addEventListener("hashchange", router);
   renderAll();
   router();
 })();
-
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 </body>
